cloudformation_ec2_template.json
{
    "AWSTemplateFormatVersion":"2010-09-09",
    "Description":"Lab EC2",
    "Parameters":{
        "KeyP":{
            "Type":"AWS::EC2::KeyPair::KeyName",
            "Description":"Please select Key"
        },
        "InstanceType":{
            "Type":"String",
            "AllowedValues":["t2.micro","t2.small","t2.medium"],
            "Description":"Select the Instance Type"
        }
    },
    "Mappings":{
        "RegionMap":{
            "us-east-1":{
                "micro":"ami-026c8acd92718196b"
            },
            "us-west-2":{
                "micro":"ami-068670db424b01e9a"
            }
        }
    },
    "Resources":{
        "LabEC2":{
            "Type": "AWS::EC2::Instance",
            "DependsOn":["LabVpc","S3InstanceProfile"],
            "Properties":{
                "ImageId":{
                    "Fn::FindInMap":[
                        "RegionMap",{"Ref":"AWS::Region"},"micro"
                    ]
                },
                "InstanceType":{"Ref":"InstanceType"},
                "IamInstanceProfile":{"Ref":"S3InstanceProfile"},
                "KeyName":{
                    "Ref":"KeyP"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{"Fn::Join":[",",["My","EC2 for ",{"Ref":"AWS::Region"}," and for stack ",{"Ref":"AWS::StackName"}]]}
                    }
                ],
                "NetworkInterfaces":[
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "GroupSet": [{ "Ref" : "EC2SG" }],
                        "SubnetId": { "Ref" : "LabSubnetPublic" }
                    }
                ]
            }

        },
        "EC2SG":{
            "Type":"AWS::EC2::SecurityGroup",
            "DependsOn":"LabVpc",
            "Properties":{
                "GroupDescription":"Security Group for EC2",
                "VpcId":{
                    "Ref":"LabVpc"
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"80",
                        "FromPort":"80"
                    },
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"22",
                        "FromPort":"22"
                    },
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"80",
                        "FromPort":"80"
                    },
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"8080",
                        "FromPort":"8080"
                    },
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"61000",
                        "FromPort":"32768"
                    },
                    {
                        "IpProtocol":"tcp",
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"443",
                        "FromPort":"443"
                    }
                ],
                "SecurityGroupEgress":[
                    {
                        "CidrIp":"0.0.0.0/0",
                        "ToPort":"-1",
                        "IpProtocol":"-1"
                    }
                ]
            }
        },
        "LabIG":{
            "Type":"AWS::EC2::InternetGateway",
            "DependsOn":"LabVpc",
            "Properties":{
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":"LabIg"
                    }
                ]
            }
        },
        "LabRtPub":{
            "Type":"AWS::EC2::RouteTable",
            "DependsOn":["LabVpc","labigattach"],
            "Properties":{
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":"Lab Public RT"
                    }
                ],
                "VpcId":{"Ref":"LabVpc"}
            }

        },
        "labigattach":{
            "Type":"AWS::EC2::VPCGatewayAttachment",
            "DependsOn":["LabVpc","LabIG"],
            "Properties":{
                "InternetGatewayId" : {"Ref":"LabIG"},
                "VpcId" : {"Ref":"LabVpc"}
            }
        },
        "labroute":{
            "Type":"AWS::EC2::Route",
            "DependsOn":["LabIG","LabRtPub"],
            "Properties":{
                "RouteTableId":{"Ref":"LabRtPub"},
                "DestinationCidrBlock":"0.0.0.0/0",
                "GatewayId":{"Ref":"LabIG"}
            }
        },
        "LabVpc":{
            "Type":"AWS::EC2::VPC",
            "Properties":{
                "CidrBlock":"10.0.0.0/16",
                "EnableDnsHostnames":"true",
                "InstanceTenancy":"default",
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":"Lab VPC 1"
                    }
                ]
            }

        },
        "LabSubnetPublic":{
            "Type":"AWS::EC2::Subnet",
            "DependsOn":"LabVpc",
            "Properties":{
                "AvailabilityZone":"us-east-1a",
                "CidrBlock":"10.0.0.0/24",
                "VpcId":{"Ref":"LabVpc"},
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":"LabSubnetPub1"
                    }
                ]
            }
        },
        "LabPublicNACL":{
            "Type":"AWS::EC2::NetworkAcl",
            "DependsOn":["LabVpc","LabSubnetPublic"],
            "Properties":{
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":"LabPublicNACL"
                    }
                ],
                "VpcId":{"Ref":"LabVpc"}
            }
        },
        "LabSubnetNaclAssoc":{
            "Type":"AWS::EC2::SubnetNetworkAclAssociation",
            "DependsOn":["LabPublicNACL","LabSubnetPublic"],
            "Properties":{
                "NetworkAclId" : {"Ref":"LabPublicNACL"},
                "SubnetId" : {"Ref":"LabSubnetPublic"}
            }
        },
        "PublicNACL1Entry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"10",
                "CidrBlock":"0.0.0.0/0",
                "Egress":false,
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "PortRange":{"From":"22","To":"22"},
                "Protocol":"6",
                "RuleAction":"allow"
            }
        },
        "PublicNACL1Entry1":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"10",
                "CidrBlock":"0.0.0.0/0",
                "Egress":true,
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "Protocol":"-1",
                "RuleAction":"allow"
            }
        },
        "PublicNACL1Entry2":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"20",
                "CidrBlock":"0.0.0.0/0",
                "Egress":false,
                "PortRange":{"From":"32768","To":"61000"},
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "Protocol":"6",
                "RuleAction":"allow"
            }
        },
        "PublicNACL1Entry3":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"30",
                "CidrBlock":"0.0.0.0/0",
                "Egress":false,
                "PortRange":{"From":"80","To":"80"},
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "Protocol":"6",
                "RuleAction":"allow"
            }
        },
        "PublicNACL1Entry4":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"40",
                "CidrBlock":"0.0.0.0/0",
                "Egress":false,
                "PortRange":{"From":"8080","To":"8080"},
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "Protocol":"6",
                "RuleAction":"allow"
            }
        },
        "PublicNACL1Entry5":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "DependsOn":"LabPublicNACL",
            "Properties":{
                "RuleNumber":"50",
                "CidrBlock":"0.0.0.0/0",
                "Egress":false,
                "PortRange":{"From":"443","To":"443"},
                "NetworkAclId":{"Ref":"LabPublicNACL"},
                "Protocol":"6",
                "RuleAction":"allow"
            }
        },
        "PublicNACLRtAssoc":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn":["LabSubnetPublic","LabRtPub"],
            "Properties":{
                "RouteTableId" : {"Ref":"LabRtPub"},
                "SubnetId" : {"Ref":"LabSubnetPublic"}
            }
        },
        "S3Role":{
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Path": "/",
                "Policies": [
                    {
                        "PolicyName": "root",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": "s3:*",
                                    "Resource": [
                                        "arn:aws:s3:::tan-static-website-assigment2.com",
                                        "arn:aws:s3:::tan-static-website-assigment2.com/*"
                                    ]
                                }
                            ]
                        }
                    }
                ]
        }
    },
    "S3InstanceProfile":{
        "Type": "AWS::IAM::InstanceProfile",
        "DependsOn":"S3Role",
        "Properties": {
            "Path": "/",
            "Roles": [
                {
                    "Ref": "S3Role"
                }
            ]
        }
    }
},
    "Outputs":{
        "InstanceId":{
            "Description":"The instance",
            "Value":{
                "Ref":"LabEC2"
            }
        },
        "Instanceip":{
            "Description":"Public IP",
            "Value":{
                "Fn::GetAtt":["LabEC2","PublicIp"]
            }
        },
        "InstanceDns":{
            "Description":"Public Dns",
            "Value":{
                "Fn::GetAtt":["LabEC2","PublicDnsName"]
            }
        }
    }
}
